--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
+    <ul>
+      <li><a href="01-gallery.html">Image gallery</a></li>
+      <li><a href="02-video.html">Video playback</a></li>
+      <li><a href="03-feedback.html">Feedback form</a></li>
+    </ul>
   </body>
 </html>
